typos corrected and quotes added

--- a/math-toolbox/sections/dim-analysis.tex
+++ b/math-toolbox/sections/dim-analysis.tex
@@ -4,6 +4,11 @@
 {Order-of-Magnitude Physics: Understanding the World with Dimensional Analysis, Educated Guesswork, and White Lies}
 {Peter Goldreich, Sanjoy Mahajan and Sterl Phinney, 1999.}
 
+\epigraph{We believe that technology is at its very best and it's more empowering when it simply disappears}
+{Johny Ives, Industrial Designer}{}
+
+I think the same about maths: Math is at its very best and it's more empowering when it simply disappears. (on the difference between vector methods vs coordinate methods :) or dimensional analysis vs lengthy calculations :)
+
 [dim. analysis, bridgman]
 [the endeavor of dimensional analysis] is to find, without going trough a detailed solution of the problem, certain relations which must be satisfied by the various measurable quantities in which we are interested. The usual procedure is as follows. We first make a list of all the quantities on which the answer may be supposed to depend; we then write down the dimensions of these quantities, and then we demand that these quantities be combined into a functional relation in such a way that the relation remains true no matter what the size of the units in terms of which the quantities are measured.
 
