--- a/transport/sections/dim-analysis.tex
+++ b/transport/sections/dim-analysis.tex
@@ -3,6 +3,9 @@
 \epigraph{No investigator should allow himself to proceed to the detailed solution of a problem until he has made a dimensional analysis of the nature of the solution which will be obtained, and convinced himself by appeal to experiment that the points of view embodied in the underlying equations are sound.}
 {Percy Williams Bridgman}{Dimensional Analysis [Yale University Press, 1922]}
 %
+\epigraph{We believe that technology is at its very best and it's more empowering when it simply disappears.}
+{Johny Ives}{}
+%
 Dimensional analysis is an invaluable tool when dealing with physical phenomena, specially complex phenomena, since it helps to simplify complexity by stressing the important physical relationships of their parts instead of diffusing physics into complex maths.
 
 In transport processes, a useful guide to perform dimensional analysis is the following:
