--- a/reactors/preambule/physics.sty
+++ b/reactors/preambule/physics.sty
@@ -29,11 +29,14 @@
 \newcommand{\kinvis}{\nu} % kinematic viscosity
 
 %%% Chemical Reactors
-\newcommand{\rrate}{r}        % reaction rate
-\newcommand{\krcoeff}{\kappa} % reaction coefficient
-\newcommand{\rorder}{n}       % reaction order
-\newcommand{\freqfact}{A}     % prexponential or frequency factor (Arrhenius)
-\newcommand{\rtime}{\tau}     % residence time
+\newcommand{\rrate}{r}         % reaction rate
+\newcommand{\krcoeff}{\kappa}  % reaction coefficient
+\newcommand{\kstnum}{\nu}      % stoichiometric numbers (coefficients)
+\newcommand{\rorder}{n}        % reaction order
+\newcommand{\freqfact}{A}      % prexponential or frequency factor (Arrhenius)
+\newcommand{\rtime}{\tau}      % residence time
+\newcommand{\eadist}{\epsilon} % exit age distribution
+\newcommand{\crtfrac}{\varphi} % cumulative residence time fraction
 
 %%% Physical constants
 \newcommand{\kboltz}{k\txt{bol}}    % Boltzmann constant
@@ -45,12 +48,12 @@
 
 %%% Dim. analysis
 \DeclareMathOperator{\unit}{unit}
-\newcommand{\kdim}{\Pi}             % dimless quantity
-\newcommand{\phdim}[1]{\mathsf{#1}} % physical dimension
-\newcommand{\phdimtemp}{\Theta}     % physical dimension of temperature
-\newcommand{\chpq}[1]{{#1}_{c}}     % characteristic physical quantity
-\newcommand{\scpq}[1]{\bar{#1}}     % scaled physical quantity
-\newcommand{\dimfunc}{\psi}         % dimensionless function
+\newcommand{\kdim}{\Gamma}           % dimless quantity
+\newcommand{\phdim}[1]{\mathsf{#1}}  % physical dimension
+\newcommand{\phdimtemp}{\Theta}      % physical dimension of temperature
+\newcommand{\chpq}[1]{{#1}_{c}}      % characteristic physical quantity
+\newcommand{\scpq}[1]{\overline{#1}} % scaled physical quantity
+\newcommand{\dimfunc}{\psi}          % dimensionless function
 
 %%% Dimless. quantities
 \newcommand{\kbiot}{\kdim\txt{bi}}     % biot number
