--- a/reactors/sections/abstract.tex
+++ b/reactors/sections/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-In our everyday life we operate chemical processes, but we generally do not think of them in such a scientific fashion. Examples are running the washing machine or fertilizing our lawn. In order to quantify the efficiency of dirt removal in the washer, or the soil distribution pattern of our fertilizer, we need to know which transformation the chemicals will experience inside a defined volume, and how fast the transformation will be.
+In our everyday life we operate chemical processes, but we generally do not think of them in a scientific fashion. Examples are running the washing machine or fertilizing our lawn. In order to quantify the efficiency of dirt removal in the washer or the soil distribution pattern of our fertilizer, we need to know which transformation the chemicals will experience inside a defined volume and how fast the transformation will be.
 
-Chemical kinetics and reactor engineering are the scientific foundation for the analysis of most environmental engineering processes, both occurring in nature and invented by men. The need to quantify and compare processes led scientists and engineers throughout last century to develop what is now referred as Chemical Reaction Engineering (CRE). Here are presented the basics of the theory and some examples will help understand why this is fundamental in environmental engineering. All keywords are presented in \lingo{italic} font.
+Chemical kinetics and reactor engineering are the scientific foundation for the analysis of most environmental engineering processes, both natural and human made. The need to quantify and compare processes led scientists and engineers throughout last century to develop what is now referred as \lingo{Chemical Reaction Engineering}, CRE. Here are presented the basics of the theory and some examples will help understand why this is fundamental in environmental engineering. All keywords used herein are presented in \lingo{italic} font.
 \end{abstract}
