--- a/reactors/sections/kinetics.tex
+++ b/reactors/sections/kinetics.tex
@@ -1,20 +1,70 @@
 \section{Reaction Kinetics}
-Reaction Kinetics is the branch of chemistry that quantifies rates of reaction. We postulate that an \lingo{elementary
-chemical reaction} is a chemical reaction whose rate corresponds to a stoichiometric equation. In symbols: 
+\lingo{Reaction kinetics} is the branch of chemistry that quantifies rates of reaction. Even though this branch treats all types of chemical reactions, herein, however, we limit the treatment to \lingo{elementary chemical reactions}. An elementary reaction is a chemical reaction whose rate corresponds to a stoichiometric equation.
+
+Consider, for instance, a chemical process where $k$ reactants $\setbuild{\ce R_i}{i:1\to k}$ yield $l$ products $\setbuild{\ce P_j}{j:1\to l}$; \ie,
+\beq
+\sum_{i = 1}^{k}\kstnum_i\ce R_i \ce{->} \sum_{j = 1}^l\kstnum_j\ce P_j\,.
+\eeq
+Then, define the \lingo{reaction rate}, $\rrate$, by
+\beq
+-\rrate = \prod_{i = 1}^{k}\conc{R,i}^{\kstnum_i}\,,
+\eeq
+where $\conc{R,i}$ is the concentration of the $i$-th reactant, and define the overall \lingo{order of reaction}, $\rorder$, by
+\beq
+\rorder = \sum_{i = 1}^{k}\kstnum_i\,.
+\eeq
+Note that, if $\dim\conc R = [\phdim N/\phdim L^3]$, then $\dim\rrate = [\phdim N/\phdim L^3\phdim T]$ and $\dim\rorder = [1]$.
+
+The reaction rate depends on many factors:
+\begin{itemize}
+\item The nature of the reaction: some reactions are naturally faster than others. The number of reacting species, their physical state (the particles that form solids move much more slowly than those of gases or those in solution), the complexity of the reaction and other factors can greatly influence the rate of a reaction.
+%
+\item Concentration: reaction rate increases with concentration, as described by the rate law and explained by collision theory. As reactant concentration increases, the frequency of collision increases.
+%
+\item Pressure: the rate of gaseous reactions increases with pressure, which is, in fact, equivalent to an increase in concentration of the gas.The reaction rate increases in the direction where there are fewer moles of gas and decreases in the reverse direction. For condensed-phase reactions, the pressure dependence is weak.
+%
+\item Order: the order of the reaction controls how the reactant concentration (or pressure) affects reaction rate.
+%
+\item Temperature: usually conducting a reaction at a higher temperature delivers more energy into the system and increases the reaction rate by causing more collisions between particles, as explained by collision theory. However, the main reason that temperature increases the rate of reaction is that more of the colliding particles will have the necessary activation energy resulting in more successful collisions (when bonds are formed between reactants). The influence of temperature is described by the Arrhenius equation, explained below. As a rule of thumb, reaction rates for many reactions double for every 10 degrees Celsius increase in temperature, though the effect of temperature may be very much larger or smaller than this.
+\end{itemize}
+
+\begin{example}
+Consider a chemical reaction of $a$ moles of $\ce A$ and $b$ moles of $\ce B$ that yield $c$ moles of $\ce C$ and $d$ moles of $\ce D$ or, symbolically,
 \beq
 \ce{aA + bB -> cC + dD}\,.
 \eeq
-and the \lingo{reaction rate} will be defined as~\footnote{~This is the reaction rate with respect to the reactants, the one with respect to the products being $-\rrate = \krcoeff\conc C^c\conc D^d$.}
+Calculate the reaction rate and the order of reaction.
+\end{example}
+
+\begin{solution}
+By definition, the reaction rate is $-\rrate = \krcoeff\conc A^a\conc B^b$ and the order of reaction $\rorder = a + b$.
+\end{solution}
+
+The dimensions of the rate coefficient depend on $\dim\rorder$ and on $\dim\conc{}$. If concentration has dimensions of $[\phdim N/\phdim L^3]$, then, for an order $\rorder$ reaction, the rate coefficient has dimensions of 
 \beq
--\rrate = \krcoeff\conc A^a\conc B^b\,,
-\eeq
-where $\krcoeff$ is referred as the \lingo{specific [per unit mass?] reaction rate coefficient}. The overall \lingo{order of reaction}, $\rorder$, is defined as
-\beq
-\rorder = a + b\,.
+\phdim N^{1 - \rorder}\phdim L^{3(\rorder - 1)}/\phdim T\,.
 \eeq
 
-The temperature dependency of $\krcoeff$ is described by the Arrhenius equation:
+\begin{example}
+Give the dimensions of the rate coefficient for an order zero reaction and an order one reaction.
+\end{example}
+
+\begin{solution}
+For an order zero reaction, $\rorder = 0$, the rate coefficient has dimensions of $[\phdim N/\phdim L^3\phdim T]$ and, for an order one reaction, the rate coefficient has units of $[1/\phdim T]$.
+\end{solution}
+
+On the other hand, the rate coefficient depends on temperature. Such a dependency is described by Arrhenius equation:
 \beq
 \krcoeff\vat\temp = \freqfact\exp\vat{-\ener\txt{act}/\kgas\temp}\,,
 \eeq
-where $\freqfact$ is the preexponential or frequency factor, $[\phdim 1]$, $\ener\txt{act}$ the activation energy, $[\phdim E/\phdim N]$, $\kgas$ the gas constant, $[\phdim E/\phdim N\phdimtemp]$, $\SI{8.314}{J/mol.K}$, and $\temp$ the thermodynamic (absolute) temperature, $[\phdimtemp]$.
+where $\freqfact$ is the preexponential factor, $\ener\txt{act}$ the activation energy, $[\phdim E/\phdim N]$, $\kgas$ the gas constant, $[\phdim E/\phdim N\phdimtemp]$, $\SI{8.3144621(75)}{J/mol.K}$, and $\temp$ the thermodynamic (absolute) temperature, $[\phdimtemp]$.
+
+Alternatively, Arrhenius equation can be written as
+\beq
+\krcoeff\vat\temp = \freqfact\exp\vat{-\ener\txt{act}/\kboltz\temp}\,,
+\eeq
+where $\kboltz$ is Boltzmann constant, $[\phdim E/\phdimtemp]$, $\SI{1.3806488(13)e-23}{J/K}$.
+
+The difference between the two equations is the dimensions of $\ener\txt{act}$, because of the usage of either $\kgas$ or $\kboltz$: in the former, mostly used in chemistry, $\dim\ener\txt{act}$ are energy per unit chemical amount; in the latter, mostly used in physics, $\dim\ener\txt{act}$ are energy per molecule.
+
+The dimensions of $\freqfact$ are the same as the dimensions of $\krcoeff$; \ie, $\dim\freqfact$ depends on the order of the reaction.
