--- a/reactors/sections/abstract.tex
+++ b/reactors/sections/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-In our everyday life we operate chemical processes, but we generally do not think of them in a scientific fashion. Examples are running the washing machine or fertilizing our lawn. In order to quantify the efficiency of dirt removal in the washer or the soil distribution pattern of our fertilizer, we need to know which transformation the chemicals will experience inside a defined volume and how fast the transformation will be.
+In our everyday activities, we witness countless chemical processes, like running the washing machine or fertilizing our lawn, without looking at them with a scientific eye. However, if we were to quantify the efficiency of dirt removal in the washer or the soil distribution pattern of our fertilizer, then we would need to know which transformation the chemicals contained in those systems would undergo inside a defined volume and how fast the transformation would be.
 
-Chemical kinetics and reactor engineering are the scientific foundation for the analysis of most environmental engineering processes, both natural and human made. The need to quantify and compare processes led scientists and engineers throughout last century to develop what is now referred as \lingo{Chemical Reaction Engineering}, CRE. Here are presented the basics of the theory and some examples will help understand why this is fundamental in environmental engineering. All keywords used herein are presented in \lingo{italic} font.
+Chemical kinetics and reactor engineering provide the scientific foundation for the analysis of most engineering processes -- natural and human made. They establish the framework for the quantification of their efficiency. The theory behind chemical kinetics and reactor engineering developed into what is now known as \lingo{chemical reaction engineering}, CRE. Herein the basis of the CRE theory are presented, including some examples that will deepen the understanding of the role played by CRE as the foundation of environmental engineering.
 \end{abstract}
