--- a/reactors/reactors.tex
+++ b/reactors/reactors.tex
@@ -12,6 +12,7 @@
 \tableofcontents
 \input{./sections/kinetics}
 \input{./sections/mass-balance}
+\input{./sections/chem-reactions}
 \input{./sections/notes}
 
 \appendix
